[gd_scene load_steps=2 format=3 uid="uid://c5ecgoe53r8a4"]

[ext_resource type="Script" path="res://Scenes/Components/auto_move_component.gd" id="1_tf0f5"]

[node name="AutoMoveComponent" type="Node2D"]
script = ExtResource("1_tf0f5")

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-28, 0)
collision_mask = 36

[node name="RayCastDown" type="RayCast2D" parent="."]
position = Vector2(-30, 0)
target_position = Vector2(0, 40)
collision_mask = 4
